# SOP_crew

./: README.md  overview.md
sop_crew/: pyproject.toml
sop_crew/markdown/: SOP.md  SOP_draft.md  SOP_revised.md  process_owner_steps.md  visual.md
sop_crew/src/sop_crew/: crew.py  main.py
sop_crew/src/sop_crew/config/: agents.yaml  tasks.yaml
